--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title> Meu Site Legal </title>
     </head>
     <body>
-        <h1>Ola mundo</h1>
+        <h1>Seja Bem-Vindo ao meu Site</h1>
     </body>
 </html>
