--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
     <head>
         <title> Meu Site Legal </title>
+        <meta charset="utf-8">
     </head>
     <body>
         <h1>Seja Bem-Vindo ao meu Site</h1>
+        <ul>
+            <li>promoção</li>
+            <li>receba informções no e-mail</li>
+            <li>Ajude o Site</li>
+        <ul>
     </body>
 </html>
