--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
     </head>
     <body>
+        <img src="https://th.bing.com/th/id/OIP.613HUxXn5zKOkz5l2XCSJQHaEx?w=308&h=198&c=7&r=0&o=7&pid=1.7&rm=3" alt="">
         <h1>Seja Bem-Vindo ao meu Site</h1>
         <ul>
             <li>promoção</li>
