--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
     
     <center>
-            <img src="https://th.bing.com/th/id/OIP.613HUxXn5zKOkz5l2XCSJQHaEx?w=308&h=198&c=7&r=0&o=7&pid=1.7&rm=3">
+            <img src="https://wallpapercave.com/wp/wp6088146.jpg">
     </center>    
 </body>
 </html>
