--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     
     <center>
             <img src="https://wallpapercave.com/wp/wp6088146.jpg">
-    </center>    
+    </center>
+     <li><a href="sobre html">Nossa História</a></li>    
 </body>
 </html>
